# downloads-organizer

./: .env.example  .gitignore  CHANGELOG.md  README.md  config.yaml  install_task.ps1  pyproject.toml
src/organizer/: archiver.py  classifier.py  config.py  deduplicator.py  llm_classifier.py  logger.py  main.py  mover.py  notifier.py  scanner.py
tests/: test_archiver.py  test_classifier.py  test_config.py  test_deduplicator.py  test_llm_classifier.py  test_main.py  test_mover.py  test_notifier.py  test_scanner.py
